--- a/manifest.json
+++ b/manifest.json
@@ -1,40 +1,4 @@
 {
-"display_override": ["window-controls-overlay"], 
-"protocol_handlers": [{"protocol":"mailto","url":"/newEmail?to=%s"}], 
-"shortcuts": [
-  {
-    "name": "Play Drum",
-    "short_name": "Drum",
-    "description": "Drum Session",
-    "url": "/?startLive",
-    "icons": [
-      {
-        "src": "android-chrome-192x192.png",
-        "sizes": "192x192"
-      }
-    ]
-  }
-], 
-"screenshots": [
-  {
-    "src": "screenshot1.png",
-    "sizes": "1919x938",
-    "type": "image/png",
-    "description": "Drum Kit Home Screen Light Theme"
-  },
-  {
-    "src": "screenshot2.png",
-    "sizes": "1919x934",
-    "type": "image/png",
-    "description": "Drum Kit Home Screen Dark Theme"
-  },
-  {
-    "src": "screenshot3.png",
-    "sizes": "1916x937",
-    "type": "image/png",
-    "description": "Drum Kit How To Play Light Theme"
-  }
-], 
   "name": "Drum Kit - Lemuel Blaya",
   "short_name": "Drum Kit",
   "description": "An interactive virtual drum kit you can play in your browser.",
@@ -54,5 +18,27 @@
       "sizes": "512x512",
       "type": "image/png"
     }
-  ]
+  ],
+  "screenshots": [
+  {
+    "src": "screenshot1.png",
+    "sizes": "1919x938",
+    "type": "image/png",
+    "description": "Drum Kit Home Screen Light Theme"
+  },
+  {
+    "src": "screenshot2.png",
+    "sizes": "1919x934",
+    "type": "image/png",
+    "description": "Drum Kit Home Screen Dark Theme"
+  },
+  {
+    "src": "screenshot3.png",
+    "sizes": "1916x937",
+    "type": "image/png",
+    "description": "Drum Kit How To Play Light Theme"
+  }
+], 
+"display_override": ["window-controls-overlay"], 
+"protocol_handlers": [{"protocol":"mailto","url":"/newEmail?to=%s"}] 
 }
